prevent font scaling in landscape (http://stackoverflow.com/questions/2710764/preserve-html-font-size-when-iphone-orientation-changes-from-portrait-to-landsca)

--- a/breviar-invert.css
+++ b/breviar-invert.css
@@ -375,7 +375,7 @@ body, html {
 	color: #CCCCCC;
 	font-family: Cambria, Constantia, Georgia, Lido STF, DejaVu, Liberation, GentiumPlus, Gentium, Garamond, Serif;
 	font-weight: normal; 
-	-webkit-text-size-adjust: 100%;
+	-webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
 }
 
 p { 
