--- a/ebreviar-cz.css
+++ b/ebreviar-cz.css
@@ -335,7 +335,7 @@ body, html {
 	color: #1a1a1a;
 	font-family: Sans-Serif, Candara, Verdana, Tahoma, Helvetica, Arial;
 	font-weight: normal; 
-	-webkit-text-size-adjust: 100%;
+	-webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
 }
 
 p { 
